--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
-  "name": "sutd-marketwatch-website",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@emailjs/browser": "^3.11.0",
-    "antd": "^5.4.2",
-    "formik": "^2.2.9",
-    "leaflet": "^1.9.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-leaflet": "^4.2.1",
-    "react-native": "^0.71.6",
-    "react-router-dom": "^6.10.0",
-    "react-snap-carousel": "^0.3.1",
-    "tailwind": "^4.0.0",
-    "yup": "^0.28.5"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^3.1.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.22",
-    "tailwindcss": "^3.3.1",
-    "typescript": "^4.9.3",
-    "vite": "^4.2.2"
-  }
+	"name": "sutd-marketwatch-website",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@emailjs/browser": "^3.11.0",
+		"antd": "^5.4.2",
+		"formik": "^2.2.9",
+		"leaflet": "^1.9.3",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-leaflet": "^4.2.1",
+		"react-native": "^0.71.6",
+		"react-router-dom": "^6.10.0",
+		"react-snap-carousel": "^0.3.1",
+		"yup": "^1.1.1"
+	},
+	"devDependencies": {
+		"@types/leaflet": "^1.9.3",
+		"@types/react": "^18.0.28",
+		"@types/react-dom": "^18.0.11",
+		"@vitejs/plugin-react": "^3.1.0",
+		"autoprefixer": "^10.4.14",
+		"postcss": "^8.4.21",
+		"tailwindcss": "^3.3.1",
+		"typescript": "^4.9.3",
+		"vite": "^4.2.0"
+	}
 }
